# brecho

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml
backend/: .env.sample  coverage.xml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0c043a6c57f5_add_table_client_and_seller.py  2d3beb9ba8b5_delete_analyse.py  49fe31781fe5_add_table_address_color_category_and_.py  8ec989a71dd6_add_new_tables.py  b87615fe33d9_add_new_models.py  f6c8df4c6505_create_users_table.py
backend/src/: app.py  database.py  models.py  schemas.py  security.py  settings.py
backend/src/model/: address.py  analyse.py  boleto.py  card.py  cart_want.py  category.py  checkout.py  client.py  color.py  generate.py  order_payment.py  pix.py  product.py  seller.py  user.py
backend/src/repository/: addressRepository.py  cartWantRepository.py  categoryRepository.py  checkoutRepository.py  clientRepository.py  colorRepository.py  orderPaymentRepository.py  productRepository.py  sellerRepository.py  userRepository.py
backend/src/router/: addressRouter.py  authRouter.py  cartWantRouter.py  categoryRouter.py  checkoutRouter.py  colorRouter.py  orderPaymentRouter.py  productRouter.py  sellerRouter.py  userRouter.py
backend/src/schema/: addressSchema.py  cartWantSchema.py  categorySchema.py  (+7 more)
backend/tests/: conftest.py  factories.py  test_address.py  test_app.py  test_auth.py  test_cart_want.py  test_category.py  test_checkout.py  test_color.py  test_db.py  test_product.py  test_security.py  test_seller.py  test_user.py
(+34 files in other folders)
